--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,7 +5,7 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/semantic/dist/semantic.min.css')
-  body(ng-app="app")
+  body(ng-app="app", ng-cloak)
     block content
 
 
