--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,6 +15,7 @@ html
     script(src="/jquery/dist/jquery.js")
     script(src="/javascripts/main.js")
     script(src="/javascripts/services/indexFactory.js")
+    script(src="/javascripts/services/configFactory.js")
     script(src="/javascripts/controller/indexController.js")
 
 
